@@ -48,6 +48,7 @@ typedef struct global_option_type {
 /* gameplay but not having to do with math questions per se */
 typedef struct game_option_type {
   /* general game options */
+  char current_font_name[FONT_NAME_LENGTH];
   int use_bkgd;
   int help_mode;
   int demo_mode;
@@ -119,6 +120,7 @@ unsigned int Opts_MapTextToIndex(const char* text);
 int  Opts_GetGlobalOpt(unsigned int index);
 void Opts_SetGlobalOpt(unsigned int index, int val);
 
+void Opts_SetFontName(char* font_name);
 void Opts_SetUseBkgd(int val);
 void Opts_SetHelpMode(int val);
 void Opts_SetDemoMode(int val);
@@ -151,6 +153,7 @@ void Opts_SetLastScore(int val);
 void Opts_SetKeepScore(int val);
 
 /* "Get" functions for tuxmath options struct: */
+const char* Opts_FontName(void);
 int Opts_UseBkgd(void);
 int Opts_HelpMode(void);
 int Opts_DemoMode(void);
