@@ -1,3 +1,10 @@
+2009.Mar.03 (svn.debian.org/tux4kids - revision 922)
+        Text drawing - implemented Set_SDL_Pango_Font_Size() in SDL_extras.c so
+        that BlackOutline() e.g. now use the font size argument, albeit still with
+        a slight hack.
+
+	David Bruce <davidstuartbruce@gmail.com>
+
 2009.Mar.03 (svn.debian.org/tux4kids - revision 919)
         i18n - marking of some additional strings in campaign.c and credits.c for
         translation.
